--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,4 +8,5 @@ encoding//database/utils.py=utf-8
 encoding//oncoFinder2/settings.py=utf-8
 encoding//oncoFinder2/urls.py=utf-8
 encoding//profiles/forms.py=utf-8
+encoding//profiles/utils.py=utf-8
 encoding//profiles/views.py=utf-8
