--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ encoding//database/admin.py=utf-8
 encoding//database/forms.py=utf-8
 encoding//database/models.py=utf-8
 encoding//database/utils.py=utf-8
+encoding//database/views.py=utf-8
 encoding//oncoFinder2/settings.py=utf-8
 encoding//oncoFinder2/urls.py=utf-8
 encoding//profiles/forms.py=utf-8
