--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,8 @@ encoding//database/forms.py=utf-8
 encoding//database/models.py=utf-8
 encoding//database/utils.py=utf-8
 encoding//database/views.py=utf-8
+encoding//metabolism/admin.py=utf-8
+encoding//metabolism/views.py=utf-8
 encoding//oncoFinder2/settings.py=utf-8
 encoding//oncoFinder2/urls.py=utf-8
 encoding//profiles/forms.py=utf-8
