--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,10 @@ encoding//database/utils.py=utf-8
 encoding//database/views.py=utf-8
 encoding//metabolism/admin.py=utf-8
 encoding//metabolism/views.py=utf-8
+encoding//mouse/admin.py=utf-8
+encoding//mouse/models.py=utf-8
+encoding//mouse/utils.py=utf-8
+encoding//mouse/views.py=utf-8
 encoding//oncoFinder2/settings.py=utf-8
 encoding//oncoFinder2/urls.py=utf-8
 encoding//profiles/forms.py=utf-8
