--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//core/forms.py=utf-8
+encoding//core/tasks.py=utf-8
 encoding//core/views.py=utf-8
 encoding//database/admin.py=utf-8
 encoding//database/forms.py=utf-8
@@ -12,8 +13,10 @@ encoding//mouse/admin.py=utf-8
 encoding//mouse/models.py=utf-8
 encoding//mouse/utils.py=utf-8
 encoding//mouse/views.py=utf-8
+encoding//oncoFinder2/celery.py=utf-8
 encoding//oncoFinder2/settings.py=utf-8
 encoding//oncoFinder2/urls.py=utf-8
 encoding//profiles/forms.py=utf-8
 encoding//profiles/utils.py=utf-8
 encoding//profiles/views.py=utf-8
+encoding//website/views.py=utf-8
