--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//core/tasks.py=utf-8
 encoding//core/views.py=utf-8
 encoding//database/admin.py=utf-8
 encoding//database/forms.py=utf-8
+encoding//database/migrations/0001_initial.py=utf-8
+encoding//database/migrations/0002_auto__add_field_drug_db.py=utf-8
 encoding//database/models.py=utf-8
 encoding//database/utils.py=utf-8
 encoding//database/views.py=utf-8
