--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -18,7 +18,10 @@ Pillow  # instead of old PIL
 
 rpy2
 
-networkx
+# There is a bug in ver 1.11 that leads to AttributeError: 'module' object has no attribute 'to_agraph'
+# http://stackoverflow.com/questions/35279733/what-could-cause-networkx-pygraphviz-to-work-fine-alone-but-not-together
+networkx==1.10
+
 cairosvg
 python-docx
 xlwt
@@ -26,8 +29,8 @@ xlrd
 xlutils
 
 # --install-option requires a new pip,
-# maybe you need to "pip install --upgrade pip"
-# https://github.com/pygraphviz/pygraphviz/issues/71 
+# probably you need to "pip install --upgrade pip"
+# https://github.com/pygraphviz/pygraphviz/issues/71
 pygraphviz --install-option="--include-path=/usr/include/graphviz" --install-option="--library-path=/usr/lib/graphviz/"
 
 xlsxwriter
