Tidied up input document validation

--- a/pytest_unit.ini
+++ b/pytest_unit.ini
@@ -5,3 +5,4 @@ DJANGO_SETTINGS_MODULE = oncoFinder2.settings_test_unit
 addopts = --nomigrations
 testpaths =
   core/tests/unit
+  profiles/tests/unit
