--- a/environment/python/requirements_victk.txt
+++ b/environment/python/requirements_victk.txt
@@ -1,3 +1,5 @@
+# Tested on Ubuntu 15.10, Python 2.7.10
+
 amqp==1.4.9
 anyjson==0.3.3
 billiard==3.3.0.22
@@ -15,20 +17,20 @@ jsonfield==1.0.3
 kombu==3.0.33
 lxml==3.5.0
 MarkupSafe==0.23
-matplotlib==1.5.1
+matplotlib==1.5.3
 MySQL-python==1.2.5
 networkx==1.10
-numpy==1.10.4
+numpy==1.11.3
 pandas==0.17.1
-Pillow==3.1.1
+Pillow==3.4.2
 py==1.4.31
 pycparser==2.14
 pygraphviz==1.3.1
-pyparsing==2.1.0
+pyparsing==2.1.10
 pytest==2.9.1
-python-dateutil==2.5.0
+python-dateutil==2.6.0
 python-docx==0.8.5
-pytz==2015.7
+pytz==2016.10
 rpy2==2.7.8
 scikit-learn==0.17.1
 scipy==0.17.0
