Created medic commands available from manage.py

--- a/pytest_functional.ini
+++ b/pytest_functional.ini
@@ -4,4 +4,4 @@
 DJANGO_SETTINGS_MODULE = oncoFinder2.settings_test_functional
 addopts = --nomigrations
 testpaths =
-  core/tests/functional
+  medic/tests/functional
