--- a/environment/python/requirements_dev.txt
+++ b/environment/python/requirements_dev.txt
@@ -1,10 +1,16 @@
 -r requirements_victk.txt
 
+configparser==3.5.0
 coverage==4.2
+enum34==1.1.6
 fake-factory==0.5.0
 Faker==0.7.3
+flake8==3.2.1
 ipaddress==1.0.17
+mccabe==0.5.3
 mixer==4.10.2
+pycodestyle==2.2.0
+pyflakes==1.3.0
 pytest-cov==2.4.0
 pytest-django==2.9.1
 pytest-pycharm==0.4.0
