Dump gene-pathway table

--- a/pytest_functional.ini
+++ b/pytest_functional.ini
@@ -2,6 +2,7 @@
 
 [pytest]
 DJANGO_SETTINGS_MODULE = oncoFinder2.settings_test_functional
-addopts = --nomigrations
+addopts = --nomigrations --reuse-db
 testpaths =
   medic/tests/functional
+  mirna/tests/functional
